19. Discoverability e HATEOAS: A Glória do REST